# Betanet_HTX_Implementation

./: .gitignore  BETANET_COMPLIANCE_SUMMARY.md  BOUNTY_COMPLIANCE_REPORT.md  BOUNTY_IMPLEMENTATION_REPORT.md  BOUNTY_SUBMISSION_EMAIL.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_SUBMISSION_GUIDE.md  GITHUB_SETUP_GUIDE.md  JA3_JA4_IMPLEMENTATION.md  LICENSE  README.md  compliance_check.sh  fuzz_coverage.sh
.github/workflows/: ci.yml  release.yml
examples/: advanced_client.rs  basic_client.rs  basic_server.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_access_ticket.rs  fuzz_flow_control.rs  fuzz_frame_parsing.rs  fuzz_noise_handshake.rs  fuzz_tls_fingerprinting.rs
src/: access_ticket.rs  client.rs  config.rs  crypto.rs  error.rs  error_new.rs  flow_control.rs  frame.rs  fuzz_tests.rs  http_behavior.rs  lib.rs  lib_new.rs  noise.rs  origin_mirror.rs  protocol.rs  server.rs  stream.rs  tls.rs  transport.rs
tests/: integration.rs
